Fix overflowing contents

--- a/pagestyle.css
+++ b/pagestyle.css
@@ -6,6 +6,8 @@ body {
 #wrapper {
     margin-left: auto;
     margin-right: auto;
+    overflow-x: hidden;
+    position: relative;
 }
 
 .hero, .intro, .info, .footer {
